--- a/.skelleton/environment.d/watchtower.env
+++ b/.skelleton/environment.d/watchtower.env
@@ -13,9 +13,13 @@ WATCHTOWER_SCHEDULE=@weekly
 
 # WATCHTOWER_NOTIFICATION_EMAIL_FROM=
 # WATCHTOWER_NOTIFICATION_EMAIL_TO=
-# WATCHTOWER_NOTIFICATION_EMAIL_SUBJECTTAG=[Nextcloud]
+# WATCHTOWER_NOTIFICATION_EMAIL_SUBJECTTAG=Immich
 
 # WATCHTOWER_NOTIFICATION_EMAIL_SERVER=
 # WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=
 # WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=
 # WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
+
+# WATCHTOWER_NO_STARTUP_MESSAGE=true
+
+# WATCHTOWER_MONITOR_ONLY=true
