--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - ${IMMICH_SERVER_PORT:-3001}:3001
     volumes:
       - ${IMMICH_UPLOADS_PATH}:/usr/src/app/upload
+      - ./volumes/config:/config:ro
       - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
