--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
 
   immich:
@@ -55,6 +53,7 @@ services:
       service: hardware-acceleration
     volumes:
       - ${MODEL_CACHE_VOLUME:-model-cache}:/cache
+      - /etc/localtime:/etc/localtime:ro
     environment:
       DB_HOSTNAME: ${DATABASE_HOST:-postgres}
       DB_DATABASE_NAME: ${DATABASE_NAME:-immich}
@@ -70,15 +69,17 @@ services:
       POSTGRES_DB: ${DATABASE_NAME:-immich}
       POSTGRES_USER: ${DATABASE_USER:-immich}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      TZ: ${TZ:-UTC}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
     restart: unless-stopped
 
   redis:
     image: redis:7.2
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
     restart: unless-stopped
@@ -88,9 +89,9 @@ services:
     env_file: environment.d/watchtower.env
     environment:
       WATCHTOWER_SCOPE: immich-compose
-      TZ: ${TZ:-UTC}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
     restart: unless-stopped
