Allow database volume path to be configured via the .env file

--- a/.skelleton/.env
+++ b/.skelleton/.env
@@ -12,14 +12,22 @@
 IMMICH_UPLOADS_PATH=
 
 # ------------------------------------------------------------------------------
-# The MySQL database to use for storage. Only the password is required when
-# using the provided MySQL container.
+# The database Immich uses for configuration and metadata storage. Only the
+# password is required when using the provided 'postgres' container.
 # ------------------------------------------------------------------------------
 
 # DATABASE_HOST=database
 # DATABASE_NAME=immich
 # DATABASE_USER=immich
 DATABASE_PASSWORD=
+
+# ------------------------------------------------------------------------------
+# The file path where the database data will be stored. This may be absolute or
+# relative to the 'docker-compose.yaml' file. If left unset, database data will
+# be stored in a Docker volume named 'postgres-data'.
+# ------------------------------------------------------------------------------
+
+# DATABASE_VOLUME=
 
 # ------------------------------------------------------------------------------
 # The timezone used within your container. For a complete list of timezones
