--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
       POSTGRES_USER: ${DATABASE_USER:-immich}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ${DATABASE_VOLUME:-postgres-data}:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
