Added database-backup container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,7 @@ services:
     extends:
       file: hardware-acceleration.ms.yaml
       service: hardware-acceleration
-    depends_on:
-      - redis
-      - postgres
+    depends_on: [postgres, redis]
     env_file: environment.d/immich.env
     environment:
       DB_HOSTNAME: ${DATABASE_HOST:-postgres}
@@ -54,6 +52,23 @@ services:
       - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: immich-compose
+    restart: unless-stopped
+
+  database-backups:
+    image: prodrigestivill/postgres-backup-local:${POSTGRES_BACKUP_VERSION:-16}
+    depends_on: [postgres]
+    env_file: environment.d/database-backups.env
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_CLUSTER: 'TRUE'
+      POSTGRES_DB: ${DATABASE_NAME:-immich}
+      POSTGRES_USER: ${DATABASE_USER:-immich}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_EXTRA_OPTS: '--clean --if-exists'
+      BACKUP_DIR: /backups
+    volumes:
+      - ./volumes/backups:/backups
+      - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
 
   redis:
