--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,11 +42,13 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: tensorchord/pgvecto-rs:pg16-v0.2.0
+    image: ghcr.io/immich-app/postgres:16-vectorchord0.3.0-pgvectors0.2.0
+    env_file: environment.d/postgres.env
     environment:
       POSTGRES_DB: ${DATABASE_NAME:-immich}
       POSTGRES_USER: ${DATABASE_USER:-immich}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_INITDB_ARGS: '--data-checksums'
     volumes:
       - ${DATABASE_VOLUME:-postgres-data}:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
