Added image versions to the .env skeleton

--- a/.skeleton/.env
+++ b/.skeleton/.env
@@ -1,4 +1,19 @@
 # ------------------------------------------------------------------------------
+# Immich version override. Update this value and restart your containers
+# (i.e. 'docker compose up -d') to update your installation.
+# ------------------------------------------------------------------------------
+
+# IMMICH_VERSION=release
+
+# ------------------------------------------------------------------------------
+# Machine learning version override. To enable hardware acceleration, append 
+# the version tag with '-armnn', '-cuda', '-rocm', '-openvino' or '-rknn'
+# and restart your containers (i.e. 'docker compose up -d').
+# ------------------------------------------------------------------------------
+
+# MACHINE_LEARNING_VERSION=release
+
+# ------------------------------------------------------------------------------
 # The Immich server port to be exposed to the host.
 # ------------------------------------------------------------------------------
 
