Updated default valkey image tag to 9 and added a persistent cache volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,8 +56,9 @@ services:
     restart: unless-stopped
 
   cache:
-    image: valkey/valkey:${VALKEY_VERSION:-8}
+    image: valkey/valkey:${VALKEY_VERSION:-9}
     volumes:
+      - ${CACHE_VOLUME:-cache-data}:/data
       - /etc/localtime:/etc/localtime:ro
     labels:
       com.centurylinklabs.watchtower.scope: ${COMPOSE_PROJECT_NAME}
@@ -78,5 +79,6 @@ services:
     restart: unless-stopped
 
 volumes:
+  cache-data: {}
   postgres-data: {}
   model-cache: {}
