Added/updated container volume config definitions

--- a/.skeleton/.env
+++ b/.skeleton/.env
@@ -37,12 +37,14 @@ IMMICH_UPLOADS_PATH=
 DATABASE_PASSWORD=
 
 # ------------------------------------------------------------------------------
-# The file path where the database data will be stored. This may be absolute or
-# relative to the 'docker-compose.yaml' file. If left unset, database data will
-# be stored in a Docker volume named 'postgres-data'.
+# Container volume definitions. These may be named volomes or paths (absolute or
+# relative to the 'docker-compose.yaml' file). If left unset, these will default
+# to named Docker volumes.
 # ------------------------------------------------------------------------------
 
-# DATABASE_VOLUME=
+# CACHE_VOLUME=cache-data
+# DATABASE_VOLUME=postgres-data
+# MODEL_CACHE_VOLUME=model-cache
 
 # ------------------------------------------------------------------------------
 # The timezone used within your container. For a complete list of timezones
