--- a/.skeleton/.env
+++ b/.skeleton/.env
@@ -7,7 +7,7 @@
 
 # ------------------------------------------------------------------------------
 # Machine learning version override. To enable hardware acceleration, append 
-# the version tag with '-armnn', '-cuda', '-rocm', '-openvino' or '-rknn'
+# the version tag with '-armnn', '-cuda', '-rknn', '-rocm', or '-openvino'
 # and restart your containers (i.e. 'docker compose up -d').
 # ------------------------------------------------------------------------------
 
@@ -35,6 +35,14 @@ IMMICH_UPLOADS_PATH=
 # DATABASE_NAME=immich
 # DATABASE_USER=immich
 DATABASE_PASSWORD=
+
+# ------------------------------------------------------------------------------
+# Hardware acceleration configuration for transcoding and machine learning.
+# Available options: 'nvenc', 'quicksync', 'rkmpp', 'vaapi' or 'vaapi-wsl'
+# ------------------------------------------------------------------------------
+
+# HARDWARE_ACCELERATION_TRANSCODING=cpu
+# HARDWARE_ACCELERATION_MACHINE_LEARNING=cpu
 
 # ------------------------------------------------------------------------------
 # Container volume definitions. These may be named volomes or paths (absolute or
